--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="notes" id="app">
-        <div class="notes__sidebar">
+        <!-- <div class="notes__sidebar">
             <div class="notes__logo">NOTE APP</div>
             <div class="notes__list">
                 <div class="notes__list-item">
@@ -24,7 +24,8 @@
     <div class="notes__preview">
         <input type="text" class="notes__title" placeholder="note title ..."/>
         <textarea name="" class="notes__body">Take some note ...</textarea>
+    </div> -->
     </div>
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js" type="module"></script>
 </body>
 </html>
